--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
     "next": "11.1.0",
     "qs": "^6.10.1",
     "react": "17.0.2",
@@ -17,6 +18,7 @@
     "react-toastify": "^8.0.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/qs": "^6.9.7",
     "@types/react": "17.0.19",
     "@types/react-dom": "^17.0.9",
